# ChangeLog for net-analyzer/tcpreplay
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tcpreplay/ChangeLog,v 1.33 2009/07/08 10:18:18 pva Exp $

*tcpreplay-3.4.3 (08 Jul 2009)

  08 Jul 2009; Peter Volkov <pva@gentoo.org> +tcpreplay-3.4.3.ebuild:
  Version bump, fixes bug #274813, thank Andrew Savchenko for report.

*tcpreplay-3.4.2 (24 May 2009)

  24 May 2009; Peter Volkov <pva@gentoo.org> +tcpreplay-3.4.2.ebuild:
  Version bump. Now with ipv6 support.

*tcpreplay-3.4.1 (05 Apr 2009)

  05 Apr 2009; Peter Volkov <pva@gentoo.org>
  +files/tcpreplay-3.4.1-errx-exit.patch, metadata.xml,
  +tcpreplay-3.4.1.ebuild:
  Version bump, bug #261201, thank DrChandra the Gentoo Person for report.
  Fixes statical linking with libpcap and make sure we don't use bundled
  libopts, bug #252940, thank Diego E. 'Flameeyes' Pettenò for report.

  17 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  tcpreplay-3.3.2.ebuild:
  stable amd64, bug 234735

  14 Aug 2008; Raúl Porcel <armin76@gentoo.org> tcpreplay-3.3.2.ebuild:
  x86 stable wrt #234735

  04 Aug 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Describe local USE flags for GLEP 56.

*tcpreplay-3.3.2 (07 Jul 2008)

  07 Jul 2008; Markus Ullmann <jokey@gentoo.org> +tcpreplay-3.3.2.ebuild:
  Version bump for bug #229259

  23 Mar 2008; <pva@gentoo.org> -tcpreplay-3.2.1.ebuild,
  tcpreplay-3.2.3.ebuild:
  Remove old. Fix 'rm man2html', thank Markus Meier for report in bug #201842.

  21 Mar 2008; Markus Meier <maekke@gentoo.org> tcpreplay-3.2.3.ebuild:
  amd64 stable, bug #201842

  15 Feb 2008; Dawid Węgliński <cla@gentoo.org> tcpreplay-3.2.3.ebuild:
  Stable on x86 (bug #201842)

*tcpreplay-3.2.3 (10 Dec 2007)

  10 Dec 2007; <pva@gentoo.org> tcpreplay-3.2.1.ebuild,
  +tcpreplay-3.2.3.ebuild:
  Version bump. Fixed bug, which caused emerge with FEATURES=test always fail
  on tests.
